bookinfo/bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
  - match:
    - uri:
        prefix: /api/v1/ratings
    route:
    - destination:
        host: ratings
        port:
          number: 9080
  - match:
    - uri:
        prefix: /api/v1/reviews
    route:
    - destination:
        host: reviews
        port:
          number: 9080


# apiVersion: networking.istio.io/v1alpha3
# kind: Gateway
# metadata:
#   name: bookinfo-gateway
# spec:
#   # The selector matches the ingress gateway pod labels.
#   # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
#   selector:
#     istio: ingressgateway # use istio default controller
#   servers:
#   - port:
#       number: 8080
#       name: http
#       protocol: HTTP
#     hosts:
#     - "*"
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: bookinfo
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - bookinfo-gateway
#   http:
#   - match:
#     - uri:
#         exact: /productpage
#     - uri:
#         prefix: /static
#     - uri:
#         exact: /login
#     - uri:
#         exact: /logout
#     - uri:
#         prefix: /api/v1/products
#     route:
#     - destination:
#         host: productpage
#         port:
#           number: 9080
